
Other:
 • Advplayerlist can auto collapse (default disabled) in options: Interface -> "Playerlist auto collapses"
 • Player camara tracking also limits view to players viewpoint and losmode
 • Added option "Move Window Position"
 • Added option "Contain mouse inside window"
 • Removed "GroupMove" widget because it had side effects/downsides
 • Top bar: when low energy: red background, when overflowing: resource colored (see options or /resbartint to toggle)
 • Closing game when loaded unsupported AI (supported: DAI, KAIK, NullAI, Chickens)
 • Added lups heat thrusters to armatlas/corvalk + reduces size of air thrusters overall
 • Game info screen: grouped chicken modoptions, and hiding them when chickens disabled
 • Fixed: Decoy com attacked warning sound changed to a regular unit under attack sound
 • Fixed DAI echospam + working with multiple DAI bots + behavior improvements
 • Fixed map edge extension not always showing.
 • Fixed "States Prefs" widget overriding config table with empty table after loading a replay
 • Fixed Bloom rendering the map black on some maps
 • Removed old console and old ally resource bars widget
 • Renamed modoptions: removed 'mo_' prefix and change for chickens to 'chicken_'
 • Removed modoptions: "Control Victory", "firethroughfriendly", "smallfeaturenoblock", "reclaimunitefficiency", "mm_diminish_factor", "enemycomcount", "no_close_spawns", "heatmap"


10.10 -> 10.11
23/07/2018

Balance changes:
 • Decreased Core Supporter (corvette) metal cost from 165 to 160.
 • Liche: -5% maxSpeed, +5% energy cost, +2.5% buildTime, damages to commanders 3150 (vs 3350)

Other:
 • Added "Vote interface" widget (displays on top of minimap, top left)
 • Added "Lua UiKeys Loader" widget allowing to load "uikeys.txt" file located in "LuaUI/Widgets_BA"
 • Added "real map and model lights" option to light effects widget. (disable this if you have old gpu)
 • Enabled improved "apply heat distortion" option by default (light effects widget)